<resources>
    <string name="app_name">Pokedex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_your_pokedex">Welcome to your Pokedex</string>
    <string name="go_to_pokedex">Go to pokedex</string>
    <string name="about_me">About me</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer condimentum est sit amet massa eleifend rhoncus. Maecenas sodales ipsum non metus gravida facilisis id ac ipsum. Vestibulum placerat placerat suscipit. Ut elit tortor, malesuada id lacus vel, placerat pretium libero. Nulla in ipsum malesuada, lobortis ipsum nec, volutpat metus. Etiam convallis vestibulum turpis, at volutpat quam volutpat sed. Aliquam suscipit luctus lorem, eget pellentesque libero scelerisque eu. Duis sapien mi, porta eget consequat id, condimentum rhoncus metus. Nulla facilisi. Curabitur fermentum rhoncus sem sit amet auctor. Aenean faucibus ut sapien eu condimentum.  Praesent ullamcorper risus quis sollicitudin mattis. Integer pharetra nulla non est blandit, ac sodales libero condimentum. In malesuada dui eget neque tempus, sed fermentum nisi lobortis. Quisque nec augue in eros lobortis volutpat sed quis turpis. Vestibulum placerat lectus nisi, sed aliquet sem ornare nec. Quisque molestie nisl ut magna convallis porttitor. Praesent porta eros a lacus bibendum, at blandit enim posuere. Suspendisse convallis purus et sapien luctus, vel consectetur lorem scelerisque. Phasellus urna dolor, feugiat ut mattis ut, rutrum nec enim. Nam tempor neque lacus, eget mollis enim cursus sit amet. Donec sit amet porttitor eros, commodo dictum nisl. Curabitur neque nisi, convallis a est sed, congue fermentum sapien. Phasellus dapibus, purus vitae pretium suscipit, mi sapien sodales ex, eu imperdiet lectus velit vitae elit.  Suspendisse scelerisque auctor tincidunt. Nulla ut fringilla lacus. Nam bibendum consectetur erat, quis pharetra nisi fringilla id. Aliquam quis justo faucibus, suscipit odio sed, gravida nulla. Nullam sit amet feugiat lacus. Donec euismod rutrum erat et tempus. Curabitur massa risus, tristique sit amet ipsum in, porta molestie leo. Vivamus ut sapien lacinia, blandit odio at, vulputate odio. Phasellus lobortis augue id dignissim malesuada. Donec id leo sed ligula commodo mattis. Pellentesque id sapien a mauris vehicula tempor dictum in neque.  Nam sit amet augue ex. Nullam libero est, rhoncus in turpis sit amet, eleifend ultrices turpis. Maecenas lobortis dignissim elit, quis tempor nisi hendrerit vitae. Suspendisse maximus est sit amet urna luctus fringilla. Etiam semper laoreet accumsan. Proin placerat nec felis quis congue. Nunc eget odio augue. Aliquam erat volutpat. Suspendisse elementum viverra aliquet.  Pellentesque id nisl blandit, venenatis nunc quis, tempus tortor. Proin non hendrerit quam. Praesent ac faucibus lorem, vel eleifend est. Sed sit amet sollicitudin ex. Phasellus tempus tellus nec lacinia ultricies. Duis eros sapien, auctor accumsan pharetra quis, dapibus et lorem. Fusce luctus, urna non suscipit semper, neque nisi convallis sem, ac dignissim metus nisi at velit. Sed dolor tortor, sollicitudin in imperdiet ut, aliquet vel leo. Proin pharetra, nulla id semper commodo, eros tortor interdum nibh, in elementum ex mi condimentum tellus. Cras sagittis tempor massa, eu varius nibh vulputate ac. Sed tempor risus sit amet ligula mattis facilisis. Aliquam hendrerit et massa pretium tempus.</string>
    <string name="pokemon_name">Bulbasaur</string>
    <string name="pokedex">pokedex</string>
    <string name="img_description">Current Pokemon</string>
    <string name="my_favorites">My Favorites</string>
    <string name="about_the_pokedex">Pokedex App</string>
    <string name="pokedex_info">The Pokédex is an electronic device created and designed to catalog and provide information regarding the various species of Pokémon featured in the Pokémon video game, anime and manga series. The name Pokédex is a neologism including \"Pokémon\" (which itself is a portmanteau of \"pocket\" and \"monster\") and \"index\". The Japanese name is simply \"Pokémon Encyclopedia\", as it can feature every Pokémon on it, depending on the Pokédex. \n \n This particular Pokédex shows you all the 905 Pokémon from the 8 existing generations. Scroll through all of them and find interesting data about height, weight, types,... On top of that, you can save your favorite Pokémon so they are more easily findable the next time you want to look them up. \n \n HAVE FUN!!!</string>
    <string name="auth_client_id">kvWrPvw21IGTMYJLtJ0MtdY6q0onQqJY</string>
    <string name="auth_domain">dev-de5zi184qp82q5mx.us.auth0.com</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logged_in">Logged In</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="pokemon">Pokemon</string>
    <string name="pokemon_id">001</string>
    <string name="favorite">Favorite</string>
    <string name="clear">Clear</string>
</resources>